Fix bug with overflow on 1024 window width

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -28,6 +28,10 @@
   min-width: 215px;
   margin-top: -7px;
 
+  @include vp-1919 {
+    margin-right: auto;
+  }
+
   @include vp-1023 {
     width: 100%;
     display: flex;
@@ -98,6 +102,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  row-gap: 20px;
   width: 845px;
   min-height: 170px;
   margin: 0;
@@ -113,17 +118,26 @@
   @include vp-767 {
     min-height: 0;
     flex-direction: column;
+    row-gap: 0;
   }
 }
 
 .page-footer__menu-item {
   &--topics {
     width: 415px;
+
+    @include vp-1919 {
+      width: auto;
+    }
   }
 
   &--contacts {
     position: relative;
     right: 35px;
+
+    @include vp-1919 {
+      width: 310px;
+    }
   }
 
   @include vp-1023 {
@@ -186,13 +200,58 @@
   padding: 0;
   list-style: none;
 
+  @include vp-1919 {
+    &--topics {
+      display: grid;
+      grid-template-columns: 220px auto;
+      grid-template-rows: repeat(4, min-content);
+    }
+  }
+
   @include vp-1023 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    column-gap: 30px;
     height: auto;
   }
 }
 
+.page-footer__menu-subitem {
+  @include vp-1919 {
+    &--assembling {
+      order: 5;
+    }
+
+    &--contacts {
+      order: 4;
+    }
+
+    &--production {
+      order: 3;
+    }
+
+    &--products {
+      order: 2;
+    }
+
+    &--delivery {
+      order: 2;
+    }
+  }
+
+  @include vp-1023 {
+    order: 0;
+  }
+
+}
+
 .page-footer__menu-item:nth-child(2n) .page-footer__menu-subitem {
   width: 310px;
+
+  @include vp-1919 {
+    width: auto;
+  }
 
   @include vp-1023 {
     width: 320px;
@@ -215,6 +274,10 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @include vp-1919 {
+    width: auto;
   }
 
   @include vp-767 {
